baseURLをGitLab PagesのURLに変更

--- a/portfolio/config/_default/hugo.yml
+++ b/portfolio/config/_default/hugo.yml
@@ -1,4 +1,4 @@
-baseURL: https://ze.zetsubo.net
+baseURL: https://ze.zetsubo.net/zetsubo-engineer
 languageCode: ja
 defaultContentLanguage: ja
 theme: blowfish
