「カテゴリ」を「投稿」に更新

--- a/portfolio/config/_default/menus.ja.yml
+++ b/portfolio/config/_default/menus.ja.yml
@@ -1,6 +1,6 @@
 main:
-  - name: カテゴリ
-    pageRef: /category
+  - name: 投稿
+    pageRef: /post
     weight: 1
   - pre: github
     name: GitHubリポジトリ
