共有機能を有効化

--- a/portfolio/config/_default/params.yml
+++ b/portfolio/config/_default/params.yml
@@ -7,7 +7,17 @@ article:
   showDateUpdated: true
   showBreadcrumbs: true
   showReadingTime: false
+  showTableOfContents: true
   showWordCount: false
+  sharingLinks:
+    - linkedin
+    - twitter
+    - reddit
+    - pinterest
+    - facebook
+    - email
+    - whatsapp
 
 list:
   showBreadcrumbs: true
+  showTableOfContents: true
